[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/new_gui/neon.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Audio/BGM/music_gekagd.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/fonts/RobotoRegular.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/CharacterSelectMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/SaveLoader.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Graphics/bg.png" type="Texture" id=10]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.23792
margin_top = 2.11893
margin_right = 4.23792
margin_bottom = 2.1189
rect_clip_content = true
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = -259.5
margin_right = 112.5
margin_bottom = 259.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="VBoxContainer"]
margin_right = 225.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Website" type="Button" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 225.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Project Website"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 225.0
margin_bottom = 257.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="VBoxContainer"]
margin_top = 261.0
margin_right = 225.0
margin_bottom = 344.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Load Game"

[node name="dsc" type="Button" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 225.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 435.0
margin_right = 225.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -400.0
margin_top = -187.499
margin_right = 400.0
margin_bottom = 187.499

[node name="version_label" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -91.0
margin_right = 395.0
margin_bottom = -4.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 5
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="CharacterSelect" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -144.5
margin_right = 249.0
margin_bottom = 144.5

[node name="Control" parent="CharacterSelect" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -143.5
margin_right = 249.0
margin_bottom = 145.5

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -675.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveLoader" parent="." instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -45.5
margin_right = 108.0
margin_bottom = 45.5

[node name="NewSave" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.5
margin_top = -97.5
margin_right = 185.5
margin_bottom = 97.5

[node name="LineEdit" type="LineEdit" parent="NewSave"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.5
margin_top = -18.5
margin_right = 177.5
margin_bottom = 18.5
placeholder_text = "New Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateNewSave" type="Button" parent="NewSave"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -29.0
margin_right = 21.0
text = "GO!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelNewSave" type="Button" parent="NewSave"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 29.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tree_exiting" from="." to="." method="_on_Menu_tree_exiting"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Website" to="." method="_on_Website_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/dsc" to="." method="_on_Options2_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="no_saves_found" from="SaveLoader" to="." method="_on_SaveLoader_no_saves_found"]
[connection signal="pressed" from="NewSave/CreateNewSave" to="." method="_on_CreateNewSave_pressed"]
[connection signal="pressed" from="NewSave/CancelNewSave" to="." method="_on_CanceNewSave_pressed"]
